# skypro-cw-web

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_owner.py
blog/templates/blog/: blog.html  post.html  post_create.html
config/: settings.py  urls.py
config/config/: settings.py
home/: urls.py  views.py
home/templates/home/: home.html
jobs/: jobs.py  run_jobs.py
mailer/: admin.py  forms.py  models.py  urls.py  views.py
mailer/migrations/: 0001_initial.py  0002_client_changed_at_mailing_changed_at_and_more.py  0003_rename_mailing_time_mailing_end_time_and_more.py  0004_alter_mailing_end_time_alter_mailing_start_time.py  0005_alter_client_options_alter_log_options_and_more.py  0006_client_owner_mailing_owner_message_owner.py
mailer/templates/mailer/: base.html  mailing.html  mailing_confirm_delete.html  mailing_create.html  mailings.html
users/: forms.py  models.py  urls.py  views.py
users/fixtures/: groups_fixture.json
users/migrations/: 0001_initial.py
users/templates/users/: email_verification.html  login.html  password_recovery.html  register.html  user_form.html
