[tool.poetry]
name = "skypro-cw-web"
version = "0.1.0"
description = ""
authors = ["ShadeSWD <seawolfy60@gmail.com>"]
readme = "README.md"
packages = [{include = "skypro_cw_web"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
requests = "^2.31.0"
Pillow = "^10.0.0"
psycopg2 = "^2.9.7"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
